clusters/main/kubernetes/system/networkpolicies/app/couchdb-allow-ingress-gatus-internal.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-gatus-internal-couchdb
  namespace: couchdb
spec:
  endpointSelector:
    matchLabels:
      app: couchdb
      release: couchdb
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gatus
            k8s:app.kubernetes.io/instance: gatus
            k8s:app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
